1998-09-22  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.0 was released.

	* Delete EMU-CFG and EMU-MK because they have been not used.

1998-09-22  Tanaka Akira      <akr@jaist.ac.jp>

	* README.en (What's APEL?): Add notice for broken.el.

1998-09-22  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* README.en (What's APEL?): Modify for latest structure.

1998-09-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mcs-xm.el (charsets-mime-charset-alist): Comment out invalid
	definition for iso-2022-int-1.

1998-09-19  Tanaka Akira      <akr@jaist.ac.jp>

	* broken.el: New file.

	* pccl.el (apel-broken-facility): Abolished
	(apel-broken-p): Abolished

	* EMU-ELS (emu-modules): Add 'broken.

	* Makefile (elc): Do not remove emu*.elc.

	* pccl-20.el: require 'broken.
	(ccl-use-symbol-as-program): Abolished.
	(ccl-accept-symbol-as-program): New facility.
	(make-ccl-coding-system): Use `when-broken' to define.
	(ccl-encoder-eof-block-is-broken): Abolished.
	(ccl-decoder-eof-block-is-broken): Abolished.
	(ccl-eof-block-is-broken): Abolished
	(ccl-execute-eof-block-on-encoding-null): New facility.
	(ccl-execute-eof-block-on-encoding-some): Ditto.
	(ccl-execute-eof-block-on-decoding-null): Ditto.
	(ccl-execute-eof-block-on-decoding-some): Ditto.
	(ccl-execute-eof-block-on-encoding): Ditto.
	(ccl-execute-eof-block-on-decoding): Ditto.
	(ccl-execute-eof-block): Ditto.

	* pccl-om.el: require 'broken.
	(ccl-use-symbol-as-program): Abolished.
	(ccl-accept-symbol-as-program): New facility.
	(ccl-encoder-eof-block-is-broken): Abolished.
	(ccl-decoder-eof-block-is-broken): Abolished.
	(ccl-eof-block-is-broken): Abolished
	(ccl-execute-eof-block-on-encoding-null): New facility.
	(ccl-execute-eof-block-on-encoding-some): Ditto.
	(ccl-execute-eof-block-on-decoding-null): Ditto.
	(ccl-execute-eof-block-on-decoding-some): Ditto.
	(ccl-execute-eof-block-on-encoding): Ditto.
	(ccl-execute-eof-block-on-decoding): Ditto.
	(ccl-execute-eof-block): Ditto.